--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Notes</string>
-    <string name="new_note">New Note</string>
+    <string name="search">Search</string>
     <string name="settings">Settings</string>
+    <string name="add_new_note">Add New Note</string>
 </resources>
