--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Notes</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
-    <string name="add_new_note">Add New Note</string>
+    <string name="edit">Edit</string>
 </resources>
