--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="edit">Edit</string>
+    <string name="save">Save</string>
 </resources>
