--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="settings">Settings</string>
     <string name="edit">Edit</string>
     <string name="save">Save</string>
-    <string name="search_hint">Search notes..</string>
+    <string name="search_hint">Search</string>
 </resources>
