--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="edit">Edit</string>
     <string name="save">Save</string>
     <string name="search_hint">Search</string>
+    <string name="delete">Delete</string>
+    <string name="update">Update</string>
 </resources>
